Training Plan Generator (#16)
* Added getAttributesString method

* New Repetitions Activities

* Squashed commit of the following:

commit 460219a6f0a3f7774a035b80dcb53048517fbd48
Author: Dário Guimarães <dsgdevbraga@gmail.com>
Date:   Fri May 10 02:40:05 2024 +0100

    fix copies methods

commit 129a5e06b5625f81e699ecae536b231bf138120a
Author: Dário Guimarães <dsgdevbraga@gmail.com>
Date:   Fri May 10 02:32:04 2024 +0100

    New Repetitions Activities

commit 8bae2f7b985bc98cdcd8a37b442676dbc292e28d
Author: Dário Guimarães <dsgdevbraga@gmail.com>
Date:   Thu May 9 22:48:07 2024 +0100

    Added getAttributesString method

* Training Plan Generator

* merging main

* add ignore

* fix

* fix store state

* alterado o handler de peso para pedir por kg

* a

* .

---------

Co-authored-by: HugoLRauber <hugoleite8882@gmail.com>